@@ -1,5 +1,11 @@
 2009-08-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>
 
+	Minor packaging fix.
+	
+	* build-aux/mkalltests.sh: Be more verbose. 
+
+2009-08-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>
+
 	Make package less dependent on the base tree.
 	
 	* bootstrap: Make less verbose. Use the new `sl-init-autoconf'.
